refactor(lists,ownership): separate AST DynamicList from runtime ListValue and improve move diagnostics
- Split list representation into:
  - DynamicList (AST / compile-time structure)
  - ListValue (runtime value with strict element typing)
- Updated ListNode to evaluate into ListValue instead of reusing AST list
- Fixed list type inference and validation during bind phase
- Enforced explicit type for empty list declarations
- Aligned VariableDeclarationNode to initialize ListValue properly

Ownership analysis improvements:
- Enhanced OwnershipAnalyzer to track move targets precisely
- ListAdd now reports MOVE <var> -> <list name>
- StructFieldAssignment now reports MOVE <var> -> <struct.field>
- Added structural path resolution for nested struct field moves
- Improved debug logs to reflect real ownership flow

This prepares the compiler for correct memory ownership propagation
and future free-insertion passes without runtime aliasing bugs